# ai-trade

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .rsyncignore  Dockerfile  FirstReview.md  GPTRev2.md  GPTRev3.md  GPTReview.md  GemPlans.md  GemRev.md  PROJECT_STUDY.md  README.md  SETUP-SPEED.md  SecondReview.md  SuperStart.sh  docker-compose.yml  main.py  param_tune.py  pyproject.toml  requirements-pi.txt  requirements.txt  stress_test.py
.githooks/: pre-commit
.github/workflows/: secret-scan.yml
config/: config.yaml
docs/: BILLING.md
scripts/: health_check.sh  log_watch.sh
src/: __init__.py
src/ai/: __init__.py  confluence.py  order_book.py  predictor.py
src/api/: __init__.py  server.py
src/billing/: __init__.py  stripe_service.py
src/core/: __init__.py  config.py  control_router.py  database.py  engine.py  logger.py  structures.py  vault.py
src/dashboard/: __init__.py
src/exchange/: __init__.py  coinbase_rest.py  coinbase_ws.py  kraken_rest.py  kraken_ws.py  market_data.py
src/execution/: __init__.py  executor.py  risk_manager.py
src/ml/: __init__.py  backtester.py  trainer.py
src/strategies/: __init__.py  base.py  breakout.py  keltner.py  mean_reversion.py  momentum.py  reversal.py  rsi_mean_reversion.py  trend.py  vwap_momentum_alpha.py
src/utils/: __init__.py  discord_bot.py  indicator_cache.py  indicators.py  slack_bot.py  telegram.py
static/: index.html
static/css/: dashboard.css
static/js/: dashboard.js
tests/: test_core.py
